--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-08-03T13:56:39.912Z",
-        "lastAccessed": "2024-08-03T13:56:39.912Z"
+        "creation": "2024-08-04T01:28:40.552Z",
+        "lastAccessed": "2024-08-04T01:28:40.552Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-03T13:56:39.912Z",
-        "lastAccessed": "2024-08-03T13:56:39.912Z"
+        "creation": "2024-08-04T01:28:40.552Z",
+        "lastAccessed": "2024-08-04T01:28:40.552Z"
     },
     {
         "key": "ps_n",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-03T13:56:39.912Z",
-        "lastAccessed": "2024-08-03T13:56:39.912Z"
+        "creation": "2024-08-04T01:28:40.552Z",
+        "lastAccessed": "2024-08-04T01:28:40.552Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-03T13:56:39.912Z",
-        "lastAccessed": "2024-08-03T13:56:39.912Z"
+        "creation": "2024-08-04T01:28:40.552Z",
+        "lastAccessed": "2024-08-04T01:28:40.552Z"
     },
     {
         "key": "dpr",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-03T13:56:39.912Z",
-        "lastAccessed": "2024-08-03T13:56:39.912Z"
+        "creation": "2024-08-04T01:28:40.552Z",
+        "lastAccessed": "2024-08-04T01:28:40.552Z"
     },
     {
         "key": "vpd",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-03T13:56:39.912Z",
-        "lastAccessed": "2024-08-03T13:56:39.912Z"
+        "creation": "2024-08-04T01:28:40.552Z",
+        "lastAccessed": "2024-08-04T01:28:40.552Z"
     },
     {
         "key": "wl_cbv",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-03T13:56:39.912Z",
-        "lastAccessed": "2024-08-03T13:56:39.912Z"
+        "creation": "2024-08-04T01:28:40.552Z",
+        "lastAccessed": "2024-08-04T01:28:40.552Z"
     },
     {
         "key": "datr",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-03T13:56:39.912Z",
-        "lastAccessed": "2024-08-03T13:56:39.912Z"
+        "creation": "2024-08-04T01:28:40.552Z",
+        "lastAccessed": "2024-08-04T01:28:40.552Z"
     },
     {
         "key": "locale",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-03T13:56:39.912Z",
-        "lastAccessed": "2024-08-03T13:56:39.912Z"
+        "creation": "2024-08-04T01:28:40.552Z",
+        "lastAccessed": "2024-08-04T01:28:40.552Z"
     },
     {
         "key": "wd",
@@ -86,8 +86,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-03T13:56:39.912Z",
-        "lastAccessed": "2024-08-03T13:56:39.912Z"
+        "creation": "2024-08-04T01:28:40.552Z",
+        "lastAccessed": "2024-08-04T01:28:40.552Z"
     },
     {
         "key": "c_user",
@@ -95,34 +95,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-03T13:56:39.912Z",
-        "lastAccessed": "2024-08-03T13:56:39.912Z"
-    },
-    {
-        "key": "xs",
-        "value": "44%3AcJWNIEJ_ReeG7A%3A2%3A1722693352%3A-1%3A14749",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-03T13:56:39.912Z",
-        "lastAccessed": "2024-08-03T13:56:39.912Z"
+        "creation": "2024-08-04T01:28:40.552Z",
+        "lastAccessed": "2024-08-04T01:28:40.552Z"
     },
     {
         "key": "fr",
-        "value": "1iP0IY37z5ki7ukBM.AWVPJxh9QBMwH5l8ofpbhzP4JhM.BmrjbN..AAA.0.0.Bmrjb9.AWVPjfWwYhM",
+        "value": "1h7aX3TwRgn08Tflh.AWU0FAg5VGtr0kG_BOUO4gzqZGk.BmrtlA..AAA.0.0.BmrtlA.AWVQwbqeTSE",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-03T13:56:39.912Z",
-        "lastAccessed": "2024-08-03T13:56:39.912Z"
+        "creation": "2024-08-04T01:28:40.552Z",
+        "lastAccessed": "2024-08-04T01:28:40.552Z"
+    },
+    {
+        "key": "xs",
+        "value": "44%3AcJWNIEJ_ReeG7A%3A2%3A1722693352%3A-1%3A14749%3A%3AAcVwuqFcFyXrAHMzR_GhaDfNFzYTVZZpFTxZ0sSqIw",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-04T01:28:40.552Z",
+        "lastAccessed": "2024-08-04T01:28:40.552Z"
     },
     {
         "key": "presence",
-        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1722693375208%2C%22v%22%3A1%7D",
+        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1722734912978%2C%22v%22%3A1%7D",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-03T13:56:39.912Z",
-        "lastAccessed": "2024-08-03T13:56:39.912Z"
+        "creation": "2024-08-04T01:28:40.552Z",
+        "lastAccessed": "2024-08-04T01:28:40.552Z"
     }
 ]
