--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-08-04T11:04:18.559Z",
-        "lastAccessed": "2024-08-04T11:04:18.559Z"
+        "creation": "2024-08-05T01:29:05.305Z",
+        "lastAccessed": "2024-08-05T01:29:05.305Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-04T11:04:18.559Z",
-        "lastAccessed": "2024-08-04T11:04:18.559Z"
+        "creation": "2024-08-05T01:29:05.305Z",
+        "lastAccessed": "2024-08-05T01:29:05.305Z"
     },
     {
         "key": "ps_n",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-04T11:04:18.559Z",
-        "lastAccessed": "2024-08-04T11:04:18.559Z"
+        "creation": "2024-08-05T01:29:05.305Z",
+        "lastAccessed": "2024-08-05T01:29:05.305Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-04T11:04:18.559Z",
-        "lastAccessed": "2024-08-04T11:04:18.559Z"
+        "creation": "2024-08-05T01:29:05.305Z",
+        "lastAccessed": "2024-08-05T01:29:05.305Z"
     },
     {
         "key": "dpr",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-04T11:04:18.559Z",
-        "lastAccessed": "2024-08-04T11:04:18.559Z"
+        "creation": "2024-08-05T01:29:05.305Z",
+        "lastAccessed": "2024-08-05T01:29:05.305Z"
     },
     {
         "key": "vpd",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-04T11:04:18.559Z",
-        "lastAccessed": "2024-08-04T11:04:18.559Z"
+        "creation": "2024-08-05T01:29:05.305Z",
+        "lastAccessed": "2024-08-05T01:29:05.305Z"
     },
     {
         "key": "wl_cbv",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-04T11:04:18.559Z",
-        "lastAccessed": "2024-08-04T11:04:18.559Z"
+        "creation": "2024-08-05T01:29:05.305Z",
+        "lastAccessed": "2024-08-05T01:29:05.305Z"
     },
     {
         "key": "datr",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-04T11:04:18.559Z",
-        "lastAccessed": "2024-08-04T11:04:18.559Z"
+        "creation": "2024-08-05T01:29:05.305Z",
+        "lastAccessed": "2024-08-05T01:29:05.305Z"
     },
     {
         "key": "locale",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-04T11:04:18.559Z",
-        "lastAccessed": "2024-08-04T11:04:18.559Z"
+        "creation": "2024-08-05T01:29:05.305Z",
+        "lastAccessed": "2024-08-05T01:29:05.305Z"
     },
     {
         "key": "wd",
@@ -86,8 +86,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-04T11:04:18.559Z",
-        "lastAccessed": "2024-08-04T11:04:18.559Z"
+        "creation": "2024-08-05T01:29:05.305Z",
+        "lastAccessed": "2024-08-05T01:29:05.305Z"
     },
     {
         "key": "c_user",
@@ -95,34 +95,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-04T11:04:18.559Z",
-        "lastAccessed": "2024-08-04T11:04:18.559Z"
-    },
-    {
-        "key": "xs",
-        "value": "44%3AcJWNIEJ_ReeG7A%3A2%3A1722693352%3A-1%3A14749%3A%3AAcXgBFl6PEreKo_RgxHZWFG4uHikuEtg3Af1ymQV6g",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-04T11:04:18.559Z",
-        "lastAccessed": "2024-08-04T11:04:18.559Z"
-    },
-    {
-        "key": "presence",
-        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1722769437261%2C%22v%22%3A1%7D",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-04T11:04:18.559Z",
-        "lastAccessed": "2024-08-04T11:04:18.559Z"
+        "creation": "2024-08-05T01:29:05.305Z",
+        "lastAccessed": "2024-08-05T01:29:05.305Z"
     },
     {
         "key": "fr",
-        "value": "1IHnGfiAVZcOuyd4n.AWVZNL86q1Bx1X9nMRYwPraagmY.Bmr2Ad..AAA.0.0.Bmr2Ai.AWUBzf7hA38",
+        "value": "1afTyn5AvSvP7mLgX.AWU-irFl6cyio5Iv_kucnfexi54.BmsCrY..AAA.0.0.BmsCrY.AWU1JDoBLaE",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-04T11:04:18.559Z",
-        "lastAccessed": "2024-08-04T11:04:18.559Z"
+        "creation": "2024-08-05T01:29:05.305Z",
+        "lastAccessed": "2024-08-05T01:29:05.305Z"
+    },
+    {
+        "key": "xs",
+        "value": "44%3AcJWNIEJ_ReeG7A%3A2%3A1722693352%3A-1%3A14749%3A%3AAcXQAgA7hCexzUIUuG7wBaO-KvmBmFCKAK9PsLkQtg",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-05T01:29:05.305Z",
+        "lastAccessed": "2024-08-05T01:29:05.305Z"
+    },
+    {
+        "key": "presence",
+        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1722821336778%2C%22v%22%3A1%7D",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-05T01:29:05.305Z",
+        "lastAccessed": "2024-08-05T01:29:05.305Z"
     }
 ]
