--- a/appstate.json
+++ b/appstate.json
@@ -1,30 +1,39 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%22100068903804185%22%3A%22delian1i%22%2C%22100095342989176%22%3A%22u6kfEInO%22%2C%2261556426205089%22%3A%22L80IqZRQ%22%2C%2261562963472651%22%3A%224U1Hocm5%22%7D",
+        "value": "%7B%2261551474205816%22%3A%22JGrSyzyL%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-08-06T12:21:35.427Z",
-        "lastAccessed": "2024-08-06T12:21:35.427Z"
+        "creation": "2024-08-08T04:16:19.589Z",
+        "lastAccessed": "2024-08-08T04:16:19.590Z"
+    },
+    {
+        "key": "datr",
+        "value": "D-CkZqAj0whM4hvFfThBvvGR",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-08T04:16:19.590Z",
+        "lastAccessed": "2024-08-08T04:16:19.590Z"
     },
     {
         "key": "sb",
-        "value": "FT5KZvGZKq0GKhRrv9P2CyZX",
+        "value": "D-CkZiTNV30xnjpt74kuTTq1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-06T12:21:35.427Z",
-        "lastAccessed": "2024-08-06T12:21:35.427Z"
+        "creation": "2024-08-08T04:16:19.590Z",
+        "lastAccessed": "2024-08-08T04:16:19.590Z"
     },
     {
-        "key": "ps_n",
-        "value": "1",
+        "key": "vpd",
+        "value": "v1%3B665x360x1.500488042831421",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-06T12:21:35.427Z",
-        "lastAccessed": "2024-08-06T12:21:35.427Z"
+        "creation": "2024-08-08T04:16:19.590Z",
+        "lastAccessed": "2024-08-08T04:16:19.590Z"
     },
     {
         "key": "ps_l",
@@ -32,62 +41,35 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-06T12:21:35.427Z",
-        "lastAccessed": "2024-08-06T12:21:35.427Z"
+        "creation": "2024-08-08T04:16:19.590Z",
+        "lastAccessed": "2024-08-08T04:16:19.590Z"
     },
     {
-        "key": "dpr",
-        "value": "2.7737884521484375",
+        "key": "ps_n",
+        "value": "1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-06T12:21:35.427Z",
-        "lastAccessed": "2024-08-06T12:21:35.427Z"
+        "creation": "2024-08-08T04:16:19.590Z",
+        "lastAccessed": "2024-08-08T04:16:19.590Z"
     },
     {
-        "key": "vpd",
-        "value": "v1%3B708x360x2.518298864364624",
+        "key": "m_pixel_ratio",
+        "value": "1.500488042831421",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-06T12:21:35.427Z",
-        "lastAccessed": "2024-08-06T12:21:35.427Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2574%3Btimestamp%3A1722137865",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-06T12:21:35.427Z",
-        "lastAccessed": "2024-08-06T12:21:35.427Z"
-    },
-    {
-        "key": "datr",
-        "value": "W1WnZvgZez30YpN2LMPXXIe1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-06T12:21:35.427Z",
-        "lastAccessed": "2024-08-06T12:21:35.427Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_GB",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-06T12:21:35.427Z",
-        "lastAccessed": "2024-08-06T12:21:35.427Z"
+        "creation": "2024-08-08T04:16:19.590Z",
+        "lastAccessed": "2024-08-08T04:16:19.590Z"
     },
     {
         "key": "wd",
-        "value": "1060x2084",
+        "value": "720x1329",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-06T12:21:35.427Z",
-        "lastAccessed": "2024-08-06T12:21:35.427Z"
+        "creation": "2024-08-08T04:16:19.590Z",
+        "lastAccessed": "2024-08-08T04:16:19.590Z"
     },
     {
         "key": "c_user",
@@ -95,34 +77,52 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-06T12:21:35.427Z",
-        "lastAccessed": "2024-08-06T12:21:35.427Z"
-    },
-    {
-        "key": "xs",
-        "value": "40%3A0KkoLDwSjJ4NFQ%3A2%3A1722946868%3A-1%3A14749",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-06T12:21:35.427Z",
-        "lastAccessed": "2024-08-06T12:21:35.427Z"
+        "creation": "2024-08-08T04:16:19.590Z",
+        "lastAccessed": "2024-08-08T04:16:19.590Z"
     },
     {
         "key": "fr",
-        "value": "1gA2Sn2Rd1BP0Fn6D.AWVrSajeshjGttI0vATihzkGOdw.BmshTk..AAA.0.0.BmshU2.AWW05QEq5SY",
+        "value": "1GkHlaZ3ekqCbDK0x.AWVmXW101EJxdFshuphuhwGIycg.BmqJgM..AAA.0.0.BmtERI.AWWBo4Ko9XA",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-06T12:21:35.427Z",
-        "lastAccessed": "2024-08-06T12:21:35.427Z"
+        "creation": "2024-08-08T04:16:19.590Z",
+        "lastAccessed": "2024-08-08T04:16:19.590Z"
     },
     {
-        "key": "presence",
-        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1722946876820%2C%22v%22%3A1%7D",
+        "key": "xs",
+        "value": "37%3Ab8wIHPWHQJXZjQ%3A2%3A1723089993%3A-1%3A14749",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-06T12:21:35.427Z",
-        "lastAccessed": "2024-08-06T12:21:35.427Z"
+        "creation": "2024-08-08T04:16:19.590Z",
+        "lastAccessed": "2024-08-08T04:16:19.590Z"
+    },
+    {
+        "key": "locale",
+        "value": "pa_IN",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-08T04:16:19.590Z",
+        "lastAccessed": "2024-08-08T04:16:19.590Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100738137%3BT%3A28718166",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-08T04:16:19.590Z",
+        "lastAccessed": "2024-08-08T04:16:19.590Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2584%3Btimestamp%3A1723089997",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-08T04:16:19.590Z",
+        "lastAccessed": "2024-08-08T04:16:19.590Z"
     }
 ]
