--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-08-08T04:16:19.589Z",
-        "lastAccessed": "2024-08-08T04:16:19.590Z"
+        "creation": "2024-08-08T05:24:36.856Z",
+        "lastAccessed": "2024-08-08T05:24:36.856Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T04:16:19.590Z",
-        "lastAccessed": "2024-08-08T04:16:19.590Z"
+        "creation": "2024-08-08T05:24:36.856Z",
+        "lastAccessed": "2024-08-08T05:24:36.856Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T04:16:19.590Z",
-        "lastAccessed": "2024-08-08T04:16:19.590Z"
+        "creation": "2024-08-08T05:24:36.856Z",
+        "lastAccessed": "2024-08-08T05:24:36.856Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T04:16:19.590Z",
-        "lastAccessed": "2024-08-08T04:16:19.590Z"
+        "creation": "2024-08-08T05:24:36.856Z",
+        "lastAccessed": "2024-08-08T05:24:36.856Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T04:16:19.590Z",
-        "lastAccessed": "2024-08-08T04:16:19.590Z"
+        "creation": "2024-08-08T05:24:36.856Z",
+        "lastAccessed": "2024-08-08T05:24:36.856Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T04:16:19.590Z",
-        "lastAccessed": "2024-08-08T04:16:19.590Z"
+        "creation": "2024-08-08T05:24:36.856Z",
+        "lastAccessed": "2024-08-08T05:24:36.856Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -59,44 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T04:16:19.590Z",
-        "lastAccessed": "2024-08-08T04:16:19.590Z"
-    },
-    {
-        "key": "wd",
-        "value": "720x1329",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-08T04:16:19.590Z",
-        "lastAccessed": "2024-08-08T04:16:19.590Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61562963472651",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-08T04:16:19.590Z",
-        "lastAccessed": "2024-08-08T04:16:19.590Z"
-    },
-    {
-        "key": "fr",
-        "value": "1GkHlaZ3ekqCbDK0x.AWVmXW101EJxdFshuphuhwGIycg.BmqJgM..AAA.0.0.BmtERI.AWWBo4Ko9XA",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-08T04:16:19.590Z",
-        "lastAccessed": "2024-08-08T04:16:19.590Z"
-    },
-    {
-        "key": "xs",
-        "value": "37%3Ab8wIHPWHQJXZjQ%3A2%3A1723089993%3A-1%3A14749",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-08T04:16:19.590Z",
-        "lastAccessed": "2024-08-08T04:16:19.590Z"
+        "creation": "2024-08-08T05:24:36.856Z",
+        "lastAccessed": "2024-08-08T05:24:36.856Z"
     },
     {
         "key": "locale",
@@ -104,25 +68,61 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T04:16:19.590Z",
-        "lastAccessed": "2024-08-08T04:16:19.590Z"
+        "creation": "2024-08-08T05:24:36.856Z",
+        "lastAccessed": "2024-08-08T05:24:36.856Z"
+    },
+    {
+        "key": "wd",
+        "value": "720x1329",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-08T05:24:36.856Z",
+        "lastAccessed": "2024-08-08T05:24:36.856Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61562963472651",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-08T05:24:36.856Z",
+        "lastAccessed": "2024-08-08T05:24:36.856Z"
+    },
+    {
+        "key": "fr",
+        "value": "1GkHlaZ3ekqCbDK0x.AWVJdORHJ35jL3Ly6SKiDP3F_Eo.BmqJgM..AAA.0.0.BmtFX8.AWWpWVuc1tc",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-08T05:24:36.856Z",
+        "lastAccessed": "2024-08-08T05:24:36.856Z"
+    },
+    {
+        "key": "xs",
+        "value": "49%3AQAthBhb88ewy2A%3A2%3A1723094525%3A-1%3A14749",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-08T05:24:36.856Z",
+        "lastAccessed": "2024-08-08T05:24:36.856Z"
     },
     {
         "key": "fbl_st",
-        "value": "100738137%3BT%3A28718166",
+        "value": "101225510%3BT%3A28718242",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T04:16:19.590Z",
-        "lastAccessed": "2024-08-08T04:16:19.590Z"
+        "creation": "2024-08-08T05:24:36.856Z",
+        "lastAccessed": "2024-08-08T05:24:36.856Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2584%3Btimestamp%3A1723089997",
+        "value": "v2%3Bclient_version%3A2584%3Btimestamp%3A1723094528",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T04:16:19.590Z",
-        "lastAccessed": "2024-08-08T04:16:19.590Z"
+        "creation": "2024-08-08T05:24:36.856Z",
+        "lastAccessed": "2024-08-08T05:24:36.856Z"
     }
 ]
